--- a/src/apps/WebShowcase/webapp/stylus/index.styl
+++ b/src/apps/WebShowcase/webapp/stylus/index.styl
@@ -252,9 +252,9 @@ for i in (1..10)
 legend
     margin-bottom DEFAULT_SPACE
 
-
+/*
 @require '../../components/topbar/index'
-@require '../../components/tree-menu/index'
+@require '../../components/tree-menu/index'*/
 
 
 
