--- a/src/apps/1688Admin/components/topbar/index.styl
+++ b/src/apps/1688Admin/components/topbar/index.styl
@@ -114,7 +114,7 @@ POPMENU_ARROW_COLOR = THEME_COLOR
     border-radius COMMON_BORDER_RADIUS
     list-style none
     font-size 0px
-    min-width auto
+    min-width 0.1rem !important
     width 100%
     box-shadow 0 0.05rem 0.14rem 0.02rem rgba(0, 0, 0, 0.1)
     @media SCREEN_SM
