--- a/src/apps/1688Admin/webapp/stylus/variables.styl
+++ b/src/apps/1688Admin/webapp/stylus/variables.styl
@@ -22,7 +22,7 @@ THEME_COLOR = BLUE_OCEAN
 TOP_HEIGHT = 0.6rem
 TOP_HEIGHT_MOBILE = 0.48rem
 LEFT_WIDTH = 2rem
-LEFT_WIDTH_MOBILE_PCT = 64%
+LEFT_WIDTH_MOBILE = 2.3rem
 FOOTER_HEIGHT = 0.3rem
 Z_INDEX_TOP = 300
 Z_INDEX_LEFT = 200
