--- a/src/apps/DesktopMobileViewer/webapp/stylus/index.styl
+++ b/src/apps/DesktopMobileViewer/webapp/stylus/index.styl
@@ -146,6 +146,8 @@ for i in (1..20)
             .abs-hp-mobile-{i}of{j}
                 &:before
                     cacuHeightPct(i,j)
+
+@require '../../components/frame/index'
             
 
 
