--- a/src/apps/DesktopMobileViewer/webapp/stylus/variables.styl
+++ b/src/apps/DesktopMobileViewer/webapp/stylus/variables.styl
@@ -7,7 +7,7 @@ COMMON_BORDER_RADIUS = 2px // common border redius
 IMG_DIR = '../images/'
 FONT_DIR = '../fonts/'
 
-BODY_BG = WHITE
+BODY_BG = GRAY_F0
 DEFAULT_SPACE = $default-space//0.08rem
 COMMON_BORDER_COLOR = GRAY_F9
 COMMON_BORDER_WIDTH = 1px
