--- a/src/apps/WebShowcase/webapp/index.pug
+++ b/src/apps/WebShowcase/webapp/index.pug
@@ -4,21 +4,45 @@ block content
     include ../components/topbar/index
     .container.row-space-common
         .row.top-row
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="sites/site001/index.html")
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="sites/site001/index.html" target="_blank")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_001.png")
                 .imagelabel 青岛市市南区政务网虚拟办事大厅
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="sites/site002/login.html")
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="sites/site002/login.html" target="_blank")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_002.png")
                 .imagelabel 威奥VPS生产力拉动平台
-            .col-md-4.col-sm-6.col-xs-12
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
-                    .abs-content.bg-green
-            .col-md-4.col-sm-6.col-xs-12
+                    .abs-content.imagebox
+                        img(src="images/screen_003.png")
+                .imagelabel 青岛市高新区政务网场景导航
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
-                    .abs-content.bg-green
+                    .abs-content.imagebox
+                        img(src="images/screen_004.png")
+                .imagelabel 青岛市市北区基础数据微网站
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_005.png")
+                .imagelabel 微信在线订餐
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_006.png")
+                .imagelabel 健身俱乐部微端管理系统
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_007.png")
+                .imagelabel 青岛三十四中教学楼指引
+            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_008.png")
+                .imagelabel 智慧校园PORTAL
 
 
