--- a/src/apps/1688Admin/components/topbar/index.styl
+++ b/src/apps/1688Admin/components/topbar/index.styl
@@ -70,10 +70,6 @@ POPMENU_ARROW_COLOR = THEME_COLOR
             &.active
                 background-color darken(THEME_COLOR,12%)
                 color WHITE
-        /.is-not-touch
-            .btn-topbar:hover
-                background-color darken(THEME_COLOR,12%)
-                color WHITE
         .open
             .btn-topbar
                 background-color darken(THEME_COLOR,12%)
@@ -88,7 +84,14 @@ POPMENU_ARROW_COLOR = THEME_COLOR
             border-top-right-radius 0
             border-bottom-left-radius COMMON_BORDER_RADIUS
             border-bottom-right-radius COMMON_BORDER_RADIUS
-    @media SCREEN_XS
+.desktop
+    .topbar
+        .right-shoulder
+            .btn-topbar:hover
+                background-color darken(THEME_COLOR,12%)
+                color WHITE
+.mobile
+    .topbar
         height TOP_HEIGHT_MOBILE
         .logo
             display none
@@ -117,10 +120,6 @@ POPMENU_ARROW_COLOR = THEME_COLOR
     min-width 0.1rem !important
     width 100%
     box-shadow 0 0.05rem 0.14rem 0.02rem rgba(0, 0, 0, 0.1)
-    @media SCREEN_SM
-        margin-top 0.16rem
-    @media SCREEN_XS
-        margin-top 0.16rem
     &:before
         content ""
         border-arrow(POPMENU_ARROW_COLOR,0.1rem,up)
@@ -147,11 +146,17 @@ POPMENU_ARROW_COLOR = THEME_COLOR
             &.active
                 color POPMENU_TEXT_COLOR
                 background-color darken(POPMENU_BG_COLOR,10%) !important
-        /.is-not-touch
+
+.desktop
+    .popmenu-box
+        li
             .btn-popmenu:hover
                 color POPMENU_TEXT_COLOR
                 background-color darken(POPMENU_BG_COLOR,10%) !important
-                
+
+.mobile
+    .popmenu-box
+        margin-top 0.16rem
             
 
 .topbar-space
