--- a/src/apps/DesktopMobileViewer/webapp/index.pug
+++ b/src/apps/DesktopMobileViewer/webapp/index.pug
@@ -1,6 +1,25 @@
 extends layout
 
 block content
-    h1 DesktopMobileViewer
+    .mobile-frame
+        iframe.main-iframe(frameborder = 0 src="http://47.92.100.38:3023/")
+
+block js
+    script(src='../js/vendor.js')
+    script(src='../js/app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            if(device.desktop()) {
+                var mobile_height = 736;
+                setMobileTransform();
+                $(window).resize(function() {
+                    setMobileTransform();
+                });
+                function setMobileTransform() {
+                    var scale_value = (app.getViewCtrl().getWinSize().height-40)/mobile_height;
+                    $('.mobile-frame').attr("style","-webkit-transform:scale(" + scale_value + "); -moz-transform:scale(" + scale_value + "); -ms-transform:scale(" + scale_value + "); -o-transform:scale(" + scale_value + "); transform:scale(" + scale_value + ");");
+                }
+            }
+        });
 
 
