--- a/src/apps/WebShowcase/webapp/index.pug
+++ b/src/apps/WebShowcase/webapp/index.pug
@@ -1,48 +1,132 @@
 extends layout
 
 block content
+    .top-tip
     include ../components/topbar/index
     .container.row-space-common
         .row.top-row
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="sites/site001/index.html" target="_blank")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(data-toggle="sitelinker" data-sitelink="sites/site001/index.html" data-sitetype="desktop")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_001.png")
                 .imagelabel 青岛市市南区政务网虚拟办事大厅
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="sites/site002/login.html" target="_blank")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(data-toggle="sitelinker" data-sitelink="sites/site002/login.html" data-sitetype="desktop")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_002.png")
                 .imagelabel 威奥VPS生产力拉动平台
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_003.png")
                 .imagelabel 青岛市高新区政务网场景导航
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_004.png")
                 .imagelabel 青岛市市北区基础数据微网站
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_005.png")
                 .imagelabel 微信在线订餐
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_006.png")
                 .imagelabel 健身俱乐部微端管理系统
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_007.png")
                 .imagelabel 青岛三十四中教学楼指引
-            a.col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
                 .abs-container.abs-hp-9of16
                     .abs-content.imagebox
                         img(src="images/screen_008.png")
                 .imagelabel 智慧校园PORTAL
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_009.png")
+                .imagelabel 质监局稽查局智慧执法系统
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_010.png")
+                .imagelabel 机场鸟类分布系统
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_011.png")
+                .imagelabel 中国外运网上服务系统
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_012.png")
+                .imagelabel 周德堂产后恢复中心官网
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_013.png")
+                .imagelabel 海信海视云官网
+            .col-md-4.col-sm-6.col-xs-12.touch-active.imagecontent(href="javascript:;")
+                .abs-container.abs-hp-9of16
+                    .abs-content.imagebox
+                        img(src="images/screen_014.png")
+                .imagelabel 中国方舟走出去资讯平台
+
+block js
+    script(src='js/vendor.js')
+    script(src='js/app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            var el_top_tip = $('.top-tip');
+            var el_body = $('body');
+            var tipTimer = null;
+            
+            var showTopTip = function(tiptext, showtime) {
+                if(!showtime) {
+                    showtiem = 2000;
+                }
+                el_top_tip.html(tiptext);
+                el_top_tip.addClass('show');
+                if(tipTimer != null) {
+                    window.clearTimeout(tipTimer);
+                }
+                tipTimer = window.setTimeout(function(){
+                    el_top_tip.removeClass('show');
+                    window.clearTimeout(tipTimer);
+                },showtime);
+
+            };
+            
+            el_body.bind('ui.showtoptip', function(evt,tiptext, showtime){
+                showTopTip(tiptext,showtime);
+            });
+            
+            $('[data-toggle="sitelinker"]').each(function(){
+                $(this).on('click tap', function(){
+                    var site_type = $(this).attr('data-sitetype');
+                    var site_url = $(this).attr('data-sitelink');
+                    if(device.desktop()) {
+                        if(site_type == 'mobile') {
+                            //链接到桌面移动页面查看器页面
+                            //window.open("");
+                        } else {
+                            window.open(site_url); //新窗口打开
+                        }
+                    } else if(device.tablet()) {
+                        window.location.href = site_url; //当前窗口打开
+                    } else if(device.mobile()) {
+                        if(site_type == 'desktop') {
+                            el_body.trigger('ui.showtoptip', ['请在PC或平板设备的浏览器上查看此项目', 3000]);
+                        } else {
+                            window.location.href = site_url; //当前窗口打开
+                        }
+                    }
+                });
+            });
+        });
 
 
