1688admin : Add login page

--- a/src/apps/1688Admin/webapp/stylus/bs-overwrite.styl
+++ b/src/apps/1688Admin/webapp/stylus/bs-overwrite.styl
@@ -18,10 +18,10 @@
         position absolute
         top 0.09rem
         right 0.08rem
-
+/*
 .form-group:last-child
     margin-bottom 0
-
+*/
 .pagination
     width 100%
     margin 0
@@ -38,7 +38,7 @@
                 color WHITE
 
 .form-control
-    border-color GRAY_E3
+    //border-color GRAY_E3
     &:focus
         box-shadow inset 0 1px 1px rgba(0,0,0,0.075)
         border-color THEME_COLOR
