--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -217,6 +217,7 @@ for i in (1..10)
 
 @require '../../components/topbar/index'
 @require '../../components/tree-menu/index'
+@require '../../components/login/index'
 
 
 
